NetBSD Problem Report #50559

From www@NetBSD.org  Tue Dec 15 11:37:37 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 78B5A7ACA9
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 15 Dec 2015 11:37:37 +0000 (UTC)
Message-Id: <20151215113736.5973B7ACC8@mollari.NetBSD.org>
Date: Tue, 15 Dec 2015 11:37:36 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/external/bsd/ipf/netinet/radix_ipf.c: memory leak ?
X-Send-Pr-Version: www-1.0

>Number:         50559
>Category:       misc
>Synopsis:       src/sys/external/bsd/ipf/netinet/radix_ipf.c: memory leak ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Dec 15 11:40:00 +0000 2015
>Closed-Date:    Tue Dec 15 12:39:19 +0000 2015
>Last-Modified:  Tue Dec 15 12:39:19 +0000 2015
>Originator:     David Binderman
>Release:        cvs dated 20151215
>Organization:
>Environment:
>Description:
[src/sys/external/bsd/ipf/netinet/radix_ipf.c:1483]: (error) Memory leak: order
[src/sys/external/bsd/ipf/netinet/radix_ipf.c:1500]: (error) Memory leak: order

I looks to me like every call to function randomize needs a matching
call to free.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50559 CVS commit: src/sys/external/bsd/ipf/netinet
Date: Tue, 15 Dec 2015 07:30:34 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Tue Dec 15 12:30:34 UTC 2015

 Modified Files:
 	src/sys/external/bsd/ipf/netinet: radix_ipf.c

 Log Message:
 PR/50559: David Binderman: Add missing free()'s after calls to randomize().


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/sys/external/bsd/ipf/netinet/radix_ipf.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 15 Dec 2015 12:39:19 +0000
State-Changed-Why:
christos committed a fix. Thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.