PR/50559: David Binderman: Add missing free()'s after calls to randomize().